[tool.poetry]
name = "prefect-volcano"
version = "1.2.3"
description = "Prefect integrations for interacting with Volcano."
authors = ["Prefect Technologies, Inc. <help@prefect.io>"]

[tool.poetry.dependencies]
python = ">=3.9"
prefect-kubernetes = ">=0.3.11"
tenacity = ">=8.2.3"
exceptiongroup = "*"
pyopenssl = ">=24.1.0"

[tool.poetry.plugins."prefect.collections"]
prefect_volcano = "prefect_volcano"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
